ecmascript/parser/tests/test262-error-references/fail/8e93bcbd389c6bf6.js.stderr
error: Expected (, got :
 --> $DIR/tests/test262-parser/fail/8e93bcbd389c6bf6.js:1:8
  |
1 | ({ *[0]: 0 })
  |        ^

